# AI_MCP_weather

./: .gitignore  .mcp_inspector_config.json  README.md  pyproject.toml  test_service.py
src/mcp_weather/: __init__.py  main.py  tools.py  weather_api.py
