[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-weather"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server for querying weather information in China, specifically for Shenzhen and other Chinese cities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Weather MCP Developer", email = "dev@example.com" }
]
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-weather = "mcp_weather.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_weather"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py310"
